--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
 }
 body {
   width: 100%;
+  height: inherit;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
+  background-color: #95c4cc;
 }
 h1,
 h2,
